# hydra-pl-wandb-sample-project

./: .gitignore  README.md  pyproject.toml
config/: default_config.yaml
config/callbacks/: default_callbacks.yaml
config/data/: default_data.yaml
config/logger/: wandb_logger.yaml
config/model/: autoencoder.yaml
config/trainer/: default_trainer.yaml
src/: train.py
src/factory/: dataset.py  logger.py
src/factory/networks/: autoencoder.py
