[tool.poetry]
name = "config"
version = "0.1.0"
description = ""
authors = ["zerebom <ice.choco.pudding.kokoro@gmail.comm>"]

[tool.poetry.dependencies]
python = "^3.8"
pytorch-lightning = "^1.1.0"
pytorch-lightning-bolts = "^0.2.5"
torch = "^1.7.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
